--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-watch": "npm run test -- --watch",
     "lint": "eslint --ignore-pattern \"node_modules/**/*.js\" \"src/models/**/*.js\" --fix",
     "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
-    "docs": "jsdoc --configure .jsdoc.json --verbose",
+    "docs": "rm -rf docs/ && jsdoc --configure .jsdoc.json --verbose",
     "pages": "rsync -r docs/**/**/* docs/ && rsync assets/* docs/assets/"
   },
   "bin": {
